--- a/index.html
+++ b/index.html
@@ -2,49 +2,55 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy - Spek Labs</title>
+  <title>Privacy Policy - Test Automation App</title>
 </head>
 <body>
-  <h1>Privacy Policy for Spek Labs Automations</h1>
-  
+  <h1>Privacy Policy for Test Automation App</h1>
+
   <p><strong>Last updated:</strong> <?php echo date('Y-m-d'); ?></p>
-  
+
   <p>
-    Spek Labs ("we", "our", "us") operates automation services including integrations with Facebook 
-    and other APIs through n8n and similar platforms. This page informs users ("you") 
-    about our policies regarding the collection, use, and handling of personal data.
+    This test application is created and operated solely by <strong>Usama Sheikh (usamasheikh384@gmail.com)</strong> 
+    for personal learning and experimentation with Instagram and Facebook automation workflows.
+    The app is not connected to any company, business, or agency. 
   </p>
 
-  <h2>1. Information We Collect</h2>
+  <h2>1. Purpose of This App</h2>
+  <p>
+    This app exists only for educational and testing purposes to understand how Facebook/Instagram API 
+    integrations and workflow automations function (e.g., through platforms like n8n).
+  </p>
+
+  <h2>2. Information I Collect</h2>
   <ul>
-    <li>Public Facebook profile information necessary for API connections.</li>
-    <li>Email address (only if provided for automation).</li>
-    <li>Automation metadata from workflows (non-sensitive).</li>
+    <li>Basic public profile information required by Facebook/Instagram APIs for authentication.</li>
+    <li>Your email address <strong>(only my own email: usamasheikh384@gmail.com)</strong> for testing login flows.</li>
+    <li>Non-sensitive automation metadata generated during workflow testing.</li>
   </ul>
 
-  <h2>2. How We Use Your Data</h2>
+  <h2>3. How the Data Is Used</h2>
   <p>
-    We use the collected data solely to enable Facebook-related automation workflows through n8n. 
-    No data is used for advertising, analytics, or shared with any external parties.
+    Any data retrieved through the API is used ONLY to test and run automation workflows.
+    No data is used for marketing, analytics, advertising, or shared with anyone.
   </p>
 
-  <h2>3. Data Sharing</h2>
+  <h2>4. Data Sharing</h2>
   <p>
-    We do NOT sell, trade, or share your data with third parties. 
-    Data is used internally only for operational purposes.
+    No data is sold, shared, or transferred to any third parties. 
+    All collected data remains private and is used only locally for experimentation.
   </p>
 
-  <h2>4. User Data Deletion</h2>
+  <h2>5. Data Deletion</h2>
   <p>
-    You may request deletion of all your data at any time by emailing us at 
-    <strong>support@speklabs.com</strong>.  
-    We will remove all associated automation data within 48 hours.
+    Since this is a single-user test app, you (Usama) may delete all data anytime. 
+    You can request deletion by emailing yourself at 
+    <strong>usamasheikh384@gmail.com</strong>, and all testing data will be removed within 48 hours.
   </p>
 
-  <h2>5. Contact Us</h2>
+  <h2>6. Contact</h2>
   <p>
-    If you have any questions regarding this Privacy Policy, you may contact us at:<br>
-    <strong>support@speklabs.com</strong>
+    For any questions about this Privacy Policy, you may contact:<br>
+    <strong>usamasheikh384@gmail.com</strong>
   </p>
 </body>
 </html>
